--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="{% url 'blog:client_list' %}">Clientes</a></li>
-                <li><a >Cuentas</a></li>
+                <li><a href="{% url 'blog:get_card_info' %}">Cuentas</a></li>
                 <li><a >Transacciones</a></li>
                 <li><a >Reportes</a></li>
                 <li><a >Cerrar Sesión</a></li>
