--- a/blog/templates/client/client_detail.html
+++ b/blog/templates/client/client_detail.html
@@ -4,7 +4,7 @@
 {% block title %}Details: {{ client.name }}{% endblock %}
 
 {% block content %}
-   <h1>BANK HAP CLIENT DETAIL</h1>
+   <h1>Banco El Dorado</h1>
    <div id="content">
       <div class="client-detail-container">
          <div class="client-info">
