--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -7,8 +7,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Panel de Administración - Banco{% endblock %}</title>
-    <link href="{% static 'css/blog.css' %}" rel="stylesheet">
-    <link href="{% static 'css/admin.css' %}" rel="stylesheet"> <!-- Agregar estilos específicos -->
+    <link href="{% static 'css/body.css' %}" rel="stylesheet">
+    <link href="{% static 'css/adminw.css' %}" rel="stylesheet"> <!-- Agregar estilos específicos -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="{% static 'images/logo.png' %}">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </head>
 <body>
     <header>
@@ -23,13 +30,14 @@
     
         <div class="header-container">
             <div class="logo">
-                <img src="tu-logo.png" alt="Logo">
+                {% load static %}
+                <img src="{% static 'images/logo.png' %}" alt="Logo">   
             </div>
             <nav>
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="client/client_list.html">clientes</a></li>
-                    <li><a href="card_info.html">Informacion de cuentas</a></li>
+                    <li><a href="/clients/">clientes</a></li>
+                    <li><a href="/get-card-info">Informacion de cuentas</a></li>
                     <li><a href="#">Educación Financiera</a>
                         <ul class="submenu">
                             <li><a href="#">Submenú 1</a></li>
@@ -42,7 +50,11 @@
             <button class="cta-button">Entrar</button>
         </div>
     </header>
-    
+    <div class="el-dorado-container">
+        <h1 class="main-title">BANCO EL DORADO</h1>
+        <hr class="golden-line">
+        <h2 class="subtitle">MÁS ALLÁ DE LOS NÚMEROS</h2>
+    </div>
 
     <div id="content">
         {% block content %}
