--- a/blog/templates/card_info.html
+++ b/blog/templates/card_info.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Información de la Tarjeta</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+{% extends "base.html" %}
+{% load static %}
+
+{% block title %} Informacion tarjeta, {{ client.name }}{% endblock %}
+{% block content %}
     <div class="container mt-5">
         <h1>Buscar Información de la Tarjeta</h1>
         
@@ -51,5 +47,4 @@
             </div>
         {% endif %}
     </div>
-</body>
-</html>
+{% endblock %}
