--- a/blog/templates/client/client_detail.html
+++ b/blog/templates/client/client_detail.html
@@ -24,6 +24,7 @@
             <img src="{{ client.imageSave}}" class="card-img-top" alt="{{ client.name }}"> 
 
          </div>
+         <a href="/send-email">Contactar a el cliente</a>
       </div>
    </div>
 {% endblock %}
