--- a/blog/templates/client/client_detail.html
+++ b/blog/templates/client/client_detail.html
@@ -17,6 +17,7 @@
                <li>Status: <strong>{{ client.get_status_display }}</strong></li>
                <li>Account Number: <strong>{{ client.get_account_number }}</strong></li>
                <li>Account's Type: <strong> {{ client.get_type }}</strong></li>
+               <p class="card-text"><strong>Monto a deber:</strong> ${{ loan.amount }}</p>
             </ul>
          </div>
          <div class="client-image">
